k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: accounting
  labels:
    name: accounting
    app: accounting-laravel
